# deepen-yesterday

./: .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.downloader  Dockerfile.web  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
api/: .env  Cargo.toml
api/src/: main.rs  query_root.rs
api/src/entities/: calendar.rs  content_item.rs  content_item_tag.rs  event_schedule.rs  mod.rs  prelude.rs  tag.rs
db/: Cargo.toml
db/src/: enum_from_int.rs  lib.rs
db/src/entities/: calendar.rs  content_item.rs  content_item_tag.rs  event_schedule.rs  sea_orm_active_enums.rs  tag.rs
db/src/migrator/: m_20250330_000001_init.rs  mod.rs
deepen-api/: Cargo.toml
deepen-api/src/apis/: announcements_api.rs  auth_api.rs  calendars_api.rs  configuration.rs  contents_api.rs  debug_api.rs  event_schedules_api.rs  mod.rs  other_api.rs  personalize_api.rs  setting_api.rs  users_api.rs  widgets_api.rs
deepen-api/src/models/: add_browsing_history400_response.rs  add_browsing_history404_response.rs  add_scrap_book400_response.rs  add_scrap_book404_response.rs  announcement.rs  auth_login400_response.rs  auth_login403_response.rs  auth_refresh400_response.rs  auth_refresh401_response.rs  auth_refresh403_response.rs  (+126 more)
downloader/: Cargo.toml
downloader/src/: announcements.rs  auth.rs  calendar.rs  content.rs  events.rs  lib.rs  main.rs  storage.rs  tags.rs
web/: .graphqlrc.yml  api.gql  nuxt.config.ts  package.json  pnpm-lock.yaml
web/layouts/: wrapper.vue
web/pages/: index.vue
web/public/: nintendo-common.js  nintendo-content.css  zelda-common.css
(+8 files in other folders)
